Bug 104621 - Formatting toolbar closes and cannot be reopened after converting text to Math object
Summary: Formatting toolbar closes and cannot be reopened after converting text to Mat...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.4.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-12-12 22:43 UTC by Regina Henschel
Modified: 2017-03-25 12:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-12-12 22:43:54 UTC
Open Writer. You should see the Formatting toolbar.
Enable the "Insert Formula" icon in the Standard toolbar, in case you have not done yet.
Write a text, which can be a formula. For example write a^2+b^2=c^2.
Mark this text and click on "Insert Formula". The text should be converted to a Math object without opening the UI of Math. Click in text to leave object mode.

Notice, that this action has closed the Formatting toolbar and it does not open again. That should not happen and did not happen in older Versions.
Go to menu View > Toolbars and try to reopen the Formatting toolbar. It is not possible.

To repair the state of LibreOffice double click the formula to open the Math UI, click into the Writer text to leave the Math UI, and click again into the Writer text. Now the Formatting toolbar should be open again. Otherwise restart LibreOffice.

I use version 5.4 on Windows 7. Converting to Math this way works in version 5.2.
Comment 1 V Stuart Foote 2016-12-13 03:20:14 UTC
Confirmed On Windows build with STR as given.

the Formatting toolbar returns in 

Version: 5.4.0.0.alpha0+
Build ID: cb598029835477326b190bc99abd31a487cc5a91
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-09_00:51:51
Locale: en-US (en_US); Calc: C

but goes missing, on return from OLE math object, with

Version: 5.4.0.0.alpha0+
Build ID: b894104a0b02a9b074c76feb925389d7bee6a493
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-10_01:00:52
Locale: en-US (en_US); Calc: CL

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=cb598029835477326b190bc99abd31a487cc5a91..b894104a0b02a9b074c76feb925389d7bee6a493

This looks kind of suspect... 
https://cgit.freedesktop.org/libreoffice/core/commit/?id=84f2ff67a7e404febf710b1dc7f66d06745c503f
Comment 2 Michael Stahl 2016-12-15 12:40:37 UTC
oops, sorry about that, was caused by poor reading comprehension on my part.

regression from:

commit 84f2ff67a7e404febf710b1dc7f66d06745c503f
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Fri Dec 9 23:42:14 2016 +0100

    framework: fix race in ToolBarManager creation
 
fixed on master
Comment 3 Commit Notification 2016-12-15 12:42:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d266cb32c3c982a60cd68650dd7ae8983744134e

tdf#104621 framework: Redo commit 84f2ff67a7e404febf710b1dc7f66d06745c503f

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 V Stuart Foote 2017-03-25 12:51:22 UTC
This only affected a brief set of 5.4.0.0alpha0+ builds of master in Dec 2016, n/a to 5.3 no backport needed.

Verified it does not affect current 5.3 releases
Version: 5.3.1.2 (x64)
Build ID: e80a0e0fd1875e1696614d24c32df0f95f03deb2