framework/source/layoutmanager/toolbarlayoutmanager.cxx
@@ -506,6 +506,17 @@ bool ToolbarLayoutManager::createToolbar( const OUString& rResourceURL )
             SolarMutexClearableGuard aWriteLock;
 
             UIElement& rElement = impl_findToolbar( rResourceURL );
+            if (rElement.m_xUIElement.is())
+            {
+                // somebody else must have created it while we released
+                // the SolarMutex - just dispose our new instance and
+                // do nothing. (We have to dispose either the new or the
+                // existing m_xUIElement.)
+                aWriteLock.clear();
+                uno::Reference<lang::XComponent> const xC(xUIElement, uno::UNO_QUERY);
+                xC->dispose();
+                return false;
+            }
             if ( !rElement.m_aName.isEmpty() )
             {
                 // Reuse a local entry so we are able to use the latest
